Fixing some colours and responsive layout issues with smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ section {
 }
 
 .colour-blue {
-  background-color: #00A9F0;
+  background-color: #00cfef;
 }
 .colour-orange {
   background-color: #FF8300;
